objects/Non_Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Non Attendees</relationshipLabel>
        <relationshipName>Non_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TicketTypes__c</fullName>
        <label>TicketTypes</label>
        <referenceTo>TicketTypes__c</referenceTo>
        <relationshipLabel>Non Attendees</relationshipLabel>
        <relationshipName>Non_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Non Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>TicketTypes__c</columns>
        <columns>Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Non Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>